--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -50,3 +50,24 @@
     gap: $espaciado;
     grid-template-columns: repeat($columnas, 1fr);
 }
+
+@mixin bgImage($url) {
+        background-image: url( $url );
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+}
+
+@mixin heading {
+    text-align: center;
+
+    &::after {
+        content: '';
+        display: block;/* hace que siempre se encuentre abajo del otro elemento */
+        height: 10rem;
+        margin: 0 auto; /* centrado */
+        background-image: url(../img/separador.png);
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
+}
